--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,23 @@ div.outer {
   padding: 0;
 }
 
+
+div.selected_country {
+  color: #55565A;
+  font-family: 'Helvetica Neue', Helvetica;
+  font-size: 23px;
+  text-align: center;
+}
+
 /* Customize fonts */
 body, label, input, button, select { 
   font-family: 'Helvetica Neue', Helvetica;
   font-weight: 200;
 }
+
 h1, h2, h3, h4 { font-weight: 400; }
+
+
 
 #controls {
   /* Appearance */
@@ -25,17 +36,13 @@ h1, h2, h3, h4 { font-weight: 400; }
   padding: 0 20px 20px 20px;
   cursor: move;
   /* Fade out while not hovering */
-  opacity: 0.65;
-  zoom: 0.9;
-  transition: opacity 500ms 1s;
-}
-#controls:hover {
-  /* Fade in while hovering */
   opacity: 0.95;
-  transition-delay: 0;
+  zoom: 0.9;
+  /* transition: opacity 500ms 1s; */
 }
 
-/* Position and style citation */
+
+ /* Position and style citation */
 #cite {
   position: absolute;
   bottom: 10px;
@@ -43,7 +50,7 @@ h1, h2, h3, h4 { font-weight: 400; }
   font-size: 12px;
 }
 
-/* If not using map tiles, show a white background */
+/* If not using map tiles, show a black background */
 .leaflet-container {
-  background-color: white !important;
+  background-color: black !important;
 }
