--- a/www/styles.css
+++ b/www/styles.css
@@ -33,7 +33,7 @@ h1, h2, h3, h4 { font-weight: 400; }
 #controls {
   /* Appearance */
   background-color: white;
-  padding: 0 20px 20px 20px;
+  padding: 0 20px 20px 20px;  /* box padding: top, right, bottom, left */
   cursor: move;
   /* Fade out while not hovering */
   opacity: 0.95;
